--- a/module-base/pom.xml
+++ b/module-base/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.goobi.workflow.plugin</groupId>
     <artifactId>plugin-import-mpi-khi-tn</artifactId>
-    <version>25.07-SNAPSHOT</version>
+    <version>25.07</version>
   </parent>
   <artifactId>plugin-import-mpi-khi-tn-base</artifactId>
   <packaging>jar</packaging>
